[package]
name = "cdrs_model_macros"
version = "0.1.0"
authors = ["Florrdv <flor@ronsmans.me>"]
edition = "2018"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.58", features = ["derive"] }
quote = "1.0.8"